# as2_msgs

./: CMakeLists.txt  README.md  package.xml
action/: FollowPath.action  GoToWaypoint.action  TakeOff.action  TrajectoryGenerator.action
msg/: Alert.msg  ControlMode.msg  ControllerControlMode.msg  ControllerInfo.msg  Geofence.msg  PlatformControlMode.msg  PlatformInfo.msg  PlatformStatus.msg  PoseStampedWithID.msg  Speed.msg  Thrust.msg  TrajectoryWaypoints.msg  TrajectoryWaypointsWithID.msg
srv/: SetControllerControlMode.srv  SetPlatformControlMode.srv
